--- a/starters.html
+++ b/starters.html
@@ -34,7 +34,7 @@
                 margin-top: 0px;
             }
         </style>
-        <div class="card">
+        <div class="card p-3">
           <header class="text-center py-4">
           </header>
 
