--- a/quick-answers.html
+++ b/quick-answers.html
@@ -35,7 +35,7 @@
                 margin-top: 0px;
             }
         </style>
-        <div class="card p-3">
+        <div class="quiz-container">
           <header class="text-center py-4">
           </header>
 
