--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           <p class="tile-subtitle">Tips on how to start a conversation to share the Gospel</p>
         </div>
       </a>
-      <a href="longer-answers.html" class="tile">
+      <a href="articles.html" class="tile">
         <span class="tile-icon">&#x1F4D6;</span>
         <div>
-          <h3 class="tile-title">Longer Answers</h3>
-          <p class="tile-subtitle">Curated selection of longer articles</p>
+          <h3 class="tile-title">Articles</h3>
+          <p class="tile-subtitle">Curated selection of articles on all topics</p>
         </div>
       </a>
       <a href="experiences.html" class="tile">
