--- a/starters.html
+++ b/starters.html
@@ -35,7 +35,7 @@
                 margin-top: 0px;
             }
         </style>
-        <div class="card p-3">
+        <div class="accordian-container">
           <header class="text-center py-4">
           </header>
 
