--- a/starters.html
+++ b/starters.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Include quick-answers.js -->
-    <script src="accordion.js" data-page="starters"></script>
+    <script src="JS/accordian.js" data-page="starters"></script>
 
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
