--- a/articles.html
+++ b/articles.html
@@ -6,6 +6,8 @@
     <title>WordPress Articles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
@@ -84,10 +86,10 @@
                     const tagFiltersContainer = $('#tag-filters');
 
                     // Add "All tags" filter
-                    tagFiltersContainer.append('<span class="badge bg-primary filter-tag" data-tag-id="all">All tags</span>');
+                    tagFiltersContainer.append('<span class="badge bg-primary filter-tag" data-tag-id="all"><i class="fas fa-tags"></i> All tags</span>');
 
                     uniqueTags.forEach(tag => {
-                        const tagHtml = `<span class="badge bg-secondary filter-tag" data-tag-id="${tag.id}">${tag.name}</span>`;
+                        const tagHtml = `<span class="badge bg-secondary filter-tag" data-tag-id="${tag.id}"><i class="fas fa-tag"></i> ${tag.name}</span>`;
                         tagFiltersContainer.append(tagHtml);
                     });
 
