--- a/articles.html
+++ b/articles.html
@@ -27,10 +27,13 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="articleModalContent">
-                    <img src="" class="img-fluid mb-3" id="articleModalImage" alt="Article Image">
-                    <div id="articleContent"></div>
+                    <div class="modal-image-overlay"></div>
+                    <div class="modal-content-container">
+                        <img src="" class="img-fluid mb-3" id="articleModalImage" alt="Article Image">
+                        <div id="articleContent"></div>
+                    </div>
                 </div>
-                <div class="modal-footer">
+                                <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
