--- a/articles.html
+++ b/articles.html
@@ -30,10 +30,13 @@
                     <div class="modal-image-overlay"></div>
                     <div class="modal-content-container">
                         <img src="" class="img-fluid mb-3" id="articleModalImage" alt="Article Image">
-                        <div id="articleContent"></div>
+                        <div class="modal-text-container">
+                            <h5 class="modal-title" id="articleModalLabel">Article Title</h5>
+                            <div id="articleContent"></div>
+                        </div>
                     </div>
                 </div>
-                                <div class="modal-footer">
+                                                <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
