--- a/articles.html
+++ b/articles.html
@@ -30,6 +30,7 @@
                 <div class="modal-body" id="articleModalContent">
                     <div class="modal-image-overlay"></div>
                     <div class="modal-content-container">
+                        <img src="" class="img-fluid mb-3" id="articleModalImage" alt="Article Image">
 
                         <div class="modal-text-container">
 
@@ -183,7 +184,7 @@
 
                 const modal = $(this);
                 modal.find('.modal-title').text(title);
-                modal.find('#articleModalContent').css('background-image', `url(${imageUrl})`);
+                modal.find('#articleContent').css('background-image', `url(${imageUrl})`);
                 modal.find('#articleContent').html(content);
             });
 
