--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <p class="tile-subtitle">Curated selection of articles on all topics</p>
         </div>
       </a>
-      <a href="experiences.html" class="tile">
+      <a href="articles.html?filter=Inspirational%20Stories" class="tile">
         <span class="tile-icon">&#x1F4E3;</span>
         <div>
-          <h3 class="tile-title">Experiences</h3>
+          <h3 class="tile-title">Inspirational Stories</h3>
           <p class="tile-subtitle">Read experiences of those who share their faith with us, it encourages us all to do the same</p>
         </div>
       </a>
@@ -80,6 +80,21 @@
           <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
         </div>
       </a>
+      <a href="accordian.html?category=Quick_Answers" class="tile">
+        <span class="tile-icon">&#x1F4D5;</span>
+        <div>
+          <h3 class="tile-title">Accordian Quick Answers</h3>
+          <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
+        </div>
+      </a>
+      <a href="accordian.html?category=Conversation_Starters" class="tile">
+        <span class="tile-icon">&#x1F4D5;</span>
+        <div>
+          <h3 class="tile-title">Accordian Conversation Starers</h3>
+          <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
+        </div>
+      </a>
+
     </div>
   </div>
 </body>
