--- a/articles.html
+++ b/articles.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,22 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+    <div id="header">
+        <div class="header-content">
+            <a href="index.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
+                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                </svg>
+            </a>
+            <h1>Articles</h1>
+        </div>
+    </div>
+<!-- Add the hero area -->
+<div class="hero">
+    <h2>Tips on starting a conversation with various types of people<h2>
+  </div>
+    
+    </div>
     <div class="container mt-5">
         <div class="d-flex justify-content-center flex-wrap mb-3" id="tag-filters">
         </div>
@@ -93,42 +108,58 @@
 
                     const tagFiltersContainer = $('#tag-filters');
 
-                    // Add "All tags" filter
+                    //  "All tags" filter
                     tagFiltersContainer.append('<span class="badge bg-primary filter-tag" data-tag-id="all"><i class="fas fa-tags"></i> All tags</span>');
 
                     uniqueTags.forEach(tag => {
                         const tagHtml = `<span class="badge bg-secondary filter-tag" data-tag-id="${tag.id}"><i class="fas fa-tag"></i> ${tag.name}</span>`;
                         tagFiltersContainer.append(tagHtml);
                     });
+                    $('.filter-tag').click(applyTagFilter);
+                    // Set the initial filter based on the URL parameter
+                    const initialFilter = getUrlParameter('filter');
+                    if (initialFilter) {
+                        const initialFilterTag = $('.filter-tag').filter(function() {
+                            return $(this).text().trim() === initialFilter;
+                        });
 
-                    // Add click event listener for filter tags
-                    $('.filter-tag').click(function() {
-                        $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
-                        $(this).addClass('bg-primary').removeClass('bg-secondary');
-                        const selectedTagId = $(this).data('tag-id');
-
-                        if (selectedTagId === 'all') {
-                            $('.card').parent().show();
-                        } else {
-                            $('.card').each(function() {
-                                const card = $(this);
-                                const cardTags = card.data('article-tags');
-
-                                // Check if the current tag is included in the card tags
-                                const tagIncluded = cardTags.includes(selectedTagId);
-
-                                if (tagIncluded) {
-                                    card.parent().show();
-                                } else {
-                                    card.parent().hide();
-                                }
-                            });
+                        if (initialFilterTag.length) {
+                            initialFilterTag.click();
                         }
-                    });
+                    }
+
                 })
                 .catch(error => {
                     console.error("Error fetching articles:", error);
                 });
+
+                function getUrlParameter(name) {
+                    const urlParams = new URLSearchParams(window.location.search);
+                    return urlParams.get(name);
+                }
+                function applyTagFilter() {
+                    $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
+                    $(this).addClass('bg-primary').removeClass('bg-secondary');
+                    const selectedTagId = $(this).data('tag-id');
+
+                    if (selectedTagId === 'all') {
+                        $('.card').parent().show();
+                    } else {
+                        $('.card').each(function() {
+                            const card = $(this);
+                            const cardTags = card.data('article-tags');
+
+                            // Check if the current tag is included in the card tags
+                            const tagIncluded = cardTags.includes(selectedTagId);
+
+                            if (tagIncluded) {
+                                card.parent().show();
+                            } else {
+                                card.parent().hide();
+                            }
+                        });
+                    }
+                }
 
             function appendArticle(id, imageUrl, title, content, tagsHtml, tags) {
                 const encodedContent = encodeURIComponent(content);
@@ -173,8 +204,8 @@
                     });
                 }
             });
-            // Display article content in the modal
-            $('#articleModal').on('show.bs.modal', function (event) {
+             // Display article content in the modal
+             $('#articleModal').on('show.bs.modal', function (event) {
                 const articleCard = $(event.relatedTarget);
                 const id = articleCard.data('article-id');
                 const imageUrl = articleCard.find('.card-img-top').attr('src');
