--- a/articles.html
+++ b/articles.html
@@ -72,6 +72,7 @@
                         const content = article.content.rendered;
                         const id = article.id;
                         const tags = article.tags;
+                        const publishedDate = new Date(article.date).toLocaleDateString();
 
                         let tagsPromises = tags.map(tagId => {
                             return fetch(`https://wp.explainit.app/wp-json/wp/v2/tags/${tagId}`)
@@ -93,15 +94,14 @@
                                         .then(response => response.json())
                                         .then(media => {
                                             const imageUrl = media.source_url;
-                                            appendArticle(id, imageUrl, title, content, tagsHtml, tags);
+                                            appendArticle(id, imageUrl, title, content, tagsHtml, tags, publishedDate);
                                         });
                                 } else {
-                                    appendArticle(id, '', title, content, tagsHtml, tags);
+                                    appendArticle(id, '', title, content, tagsHtml, tags, publishedDate);
                                 }
                             });
                         });
-
-                    return Promise.all(allArticlePromises);
+                        return Promise.all(allArticlePromises);
                 })
                 .then(() => {
                     const uniqueTags = Array.from(allTags.entries()).map(([id, name]) => ({ id, name }));
@@ -116,52 +116,12 @@
                         tagFiltersContainer.append(tagHtml);
                     });
                     $('.filter-tag').click(applyTagFilter);
-                    // Set the initial filter based on the URL parameter
-                    const initialFilter = getUrlParameter('filter');
-                    if (initialFilter) {
-                        const initialFilterTag = $('.filter-tag').filter(function() {
-                            return $(this).text().trim() === initialFilter;
-                        });
-
-                        if (initialFilterTag.length) {
-                            initialFilterTag.click();
-                        }
-                    }
-
                 })
                 .catch(error => {
                     console.error("Error fetching articles:", error);
                 });
 
-                function getUrlParameter(name) {
-                    const urlParams = new URLSearchParams(window.location.search);
-                    return urlParams.get(name);
-                }
-                function applyTagFilter() {
-                    $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
-                    $(this).addClass('bg-primary').removeClass('bg-secondary');
-                    const selectedTagId = $(this).data('tag-id');
-
-                    if (selectedTagId === 'all') {
-                        $('.card').parent().show();
-                    } else {
-                        $('.card').each(function() {
-                            const card = $(this);
-                            const cardTags = card.data('article-tags');
-
-                            // Check if the current tag is included in the card tags
-                            const tagIncluded = cardTags.includes(selectedTagId);
-
-                            if (tagIncluded) {
-                                card.parent().show();
-                            } else {
-                                card.parent().hide();
-                            }
-                        });
-                    }
-                }
-
-            function appendArticle(id, imageUrl, title, content, tagsHtml, tags) {
+            function appendArticle(id, imageUrl, title, content, tagsHtml, tags, publishedDate) {
                 const encodedContent = encodeURIComponent(content);
                 const cardHtml = `
                 <div class="col-md-4 mb-3">
@@ -173,6 +133,7 @@
                         </div>
                         <div class="card-footer">
                             ${tagsHtml}
+                            <span class="text-muted ms-2">Published: ${publishedDate}</span>
                         </div>
                     </div>
                 </div>
@@ -181,31 +142,10 @@
             }
 
             // Add click event listener for filter tags
-            $('.filter-tag').click(function() {
-                $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
-                $(this).addClass('bg-primary').removeClass('bg-secondary');
-                const selectedTagId = parseInt($(this).data('tag-id'));
+            $('.filter-tag').click(applyTagFilter);
 
-                if (selectedTagId === 'all') {
-                    $('.card').parent().show();
-                } else {
-                    $('.card').each(function() {
-                        const card = $(this);
-                        const cardTags = card.data('article-tags');
-
-                        // Check if the current tag is included in the card tags
-                        const tagIncluded = cardTags.includes(selectedTagId);
-
-                        if (tagIncluded) {
-                            card.parent().show();
-                        } else {
-                            card.parent().hide();
-                        }
-                    });
-                }
-            });
-             // Display article content in the modal
-             $('#articleModal').on('show.bs.modal', function (event) {
+            // Display article content in the modal
+            $('#articleModal').on('show.bs.modal', function (event) {
                 const articleCard = $(event.relatedTarget);
                 const id = articleCard.data('article-id');
                 const imageUrl = articleCard.find('.card-img-top').attr('src');
@@ -226,3 +166,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
