--- a/index.html
+++ b/index.html
@@ -23,6 +23,39 @@
       <h1>explain it app</h1>
     </div>
   </div> 
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <!-- Add more list items here if you have more images -->
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.jpg')">
+        <a href="https://explainit.app/quiz.html" class="carousel-link">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Quiz</h5>
+          <p>Fun Quiz for all the family</p>
+        </div>
+      </div>
+      <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.jpg')">
+        <a href="https://explainit.app/quiz.html" class="carousel-link">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Your Title Here</h5>
+          <p>Your Description Here</p>
+        </div>
+      </div>
+      <!-- Add more divs here if you have more images -->
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  
     <!-- Add the hero area -->
   <div class="hero">
     <h1>Tools for sharing our faith</h1>
